# nccl-doctor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
examples/: sample-report.txt
integrations/: sbatch-example.sh  slurm-epilog.sh  slurm-prolog.sh
nccl_doctor/: __init__.py  cli.py  collect.py  models.py  recommend.py  report.py  rules.py  store.py
nccl_doctor/parsers/: counters.py  host.py  nccl_log.py
tests/: make_fixtures.py  test_nccl_doctor.py
tools/: fr_export.py
